# rustic-vault

./: Cargo.toml  LICENSE  rustic-vault.desktop
.github/workflows/: ci.yml  release.yml
profiles/: example.json
src/: app.rs  main.rs
src/core/: config.rs  mod.rs  profile.rs  repo.rs  update.rs
src/ui/: help.rs  mod.rs  screen_backup.rs  screen_home.rs  screen_profile.rs  screen_repos.rs  screen_settings.rs  screen_snapshots.rs  widgets.rs
